# sketch-adventures

./: .gitignore  Cargo.toml  LICENSE  README.md  requirement.txt
src/: creations.rs  doodle-classifier.py  effects.rs  enemy.rs  goal.rs  main.rs  player.rs  resources.rs
