[package]
name = "sketch-adventures"
version = "0.1.0"
authors = [
    "Brian Broll <brian.broll@gmail.com>"
]

[dependencies]
piston = "0.35.0"
piston_window = "0.75.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
find_folder = "0.3.0"
gfx_device_gl = "0.15.0"
gfx = "0.17.0"
piston2d-gfx_graphics = "0.48.0"

image = "0.18.0"
vecmath = "0.3.0"
rand = "0.4"

